changed to multithread infrastructure

--- a/julia-notebook/tutorial.ipynb
+++ b/julia-notebook/tutorial.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "## Installing the software\n",
     "\n",
-    "1. Install [julia-1.5.3](https://julialang.org/downloads/)\n",
+    "1. Install [julia](https://julialang.org/downloads/)\n",
     "\n",
     "2. Install the ipynb interface in julia, you should add the [IJulia](https://github.com/JuliaLang/IJulia.jl) package using the package manager. Again, from the package manager prompt do a\n",
     "```\n",
@@ -39,59 +39,47 @@
    "source": [
     "## Load ArDCA package \n",
     "\n",
-    "The following cell loads the package `ArDCA` on `nprocs` workers (here `nprocs=8`) (*Warning*: the first time it takes a while)\n",
+    "The following cell loads the package `ArDCA` (*Warning*: the first time it takes a while). To fully exploit the the multicore parallel computation, julia should be invoked with\n",
     "\n",
+    "```\n",
+    "$ julia -t nthreads # put here nthreads equal to the number of cores you want to use\n",
+    "```\n",
     "\n",
-    "* The `mypkgdir` variable should be set to your `path/to/package` dir.\n",
+    "If you want to set permanently the number of threads to the desired value, you can either create a default environment variable `export JULIA_NUM_THREADS=24` in your `.bashrc`. More information [here](https://docs.julialang.org/en/v1.6/manual/multi-threading/)\n",
+    "\n",
+    "The `mypkgdir` variable should be set to your `path/to/package` dir.\n",
     "\n",
     "In this notebook we will use the PF00014 protein family available in `data/PF14/` folder of the package/\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      From worker 2:\t Activating environment at `~/CODE/ArDCA/Project.toml`\n",
-      "      From worker 4:\t Activating environment at `~/CODE/ArDCA/Project.toml`\n",
-      "      From worker 9:\t Activating environment at `~/CODE/ArDCA/Project.toml`\n",
-      "      From worker 5:\t Activating environment at `~/CODE/ArDCA/Project.toml`\n",
-      "      From worker 8:\t Activating environment at `~/CODE/ArDCA/Project.toml`\n",
-      "      From worker 3:\t Activating environment at `~/CODE/ArDCA/Project.toml`\n",
-      "      From worker 6:\t Activating environment at `~/CODE/ArDCA/Project.toml`\n",
-      "      From worker 7:\t Activating environment at `~/CODE/ArDCA/Project.toml`\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m Activating\u001b[22m\u001b[39m environment at `~/CODE/ArDCA/Project.toml`\n",
-      "┌ Info: Precompiling ArDCA [fc7e833f-a3b9-439d-ae82-c6ad11a3e54b]\n",
-      "└ @ Base loading.jl:1278\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m environment at `~/CODE/ArDCA/Project.toml`\n"
      ]
     }
    ],
    "source": [
     "mypkgdir = normpath(joinpath(pwd(),\"..\"))\n",
-    "cd(mypkgdir)\n",
-    "using Distributed\n",
-    "nprocs = 8\n",
-    "addprocs(nprocs) # choose the number of cores that you want to use (here nprocs=8)\n",
-    "@everywhere using Pkg\n",
-    "@everywhere Pkg.activate(\".\")\n",
-    "@everywhere using ArDCA"
+    "datadir=joinpath(mypkgdir,\"data\") # put here your path\n",
+    "using Pkg\n",
+    "Pkg.activate(mypkgdir)\n",
+    "using ArDCA\n",
+    "\n",
+    "## Learn the autoregressive parameters"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Learn the autoregressive parameters\n",
+    "## 0. Learning the ArDCA parameters\n",
     "\n",
     "As a preliminary step, we learn the field and the coupling parameters $h,J$ from the MSA. To do so we use the `ardca` method that return the parameters (stored in `arnet` in the cell below), and the alignment in numerical format and other algorithms variables (stored in `arvar` in the cell below). The default autoregressive order is set to `:ENTROPIC`. We set the $L_2$ regularization to 0.02 for the $J$ and 0.001 for the $h$.\n",
     "\n",
@@ -112,11 +100,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "removing duplicate sequences... done: 13600 -> 8871\n",
+      "θ = 0.3308846126401105 threshold = 17.0\n",
+      "M = 8871 N = 53 Meff = 2950.925530761646\n"
+     ]
+    }
+   ],
    "source": [
-    "arnet,arvar=ardca(\"data/PF14/PF00014_mgap6.fasta.gz\", verbose=false, lambdaJ=0.02,lambdaH=0.001);"
+    "fastafile = joinpath(datadir,\"PF14/PF00014_mgap6.fasta.gz\")\n",
+    "arnet,arvar=ardca(fastafile, verbose=false, lambdaJ=0.02,lambdaH=0.001);"
    ]
   },
   {
@@ -130,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,12 +168,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "target_sequence = 1\n",
-    "score=epistatic_score(arnet,arvar,target_sequence)"
+    "score=epistatic_score(arnet,arvar,target_sequence);"
    ]
   },
   {
@@ -195,38 +194,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "target_sequence = 1\n",
-    "D,idxgap=dms_single_site(arnet,arvar,target_sequence)"
+    "D,idxgap=dms_single_site(arnet,arvar,target_sequence);"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "D"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idxgap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -235,15 +209,15 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Julia 1.5.3",
+   "display_name": "Julia (8 threads) 1.6.0",
    "language": "julia",
-   "name": "julia-1.5"
+   "name": "julia-(8-threads)-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.3"
+   "version": "1.6.0"
   }
  },
  "nbformat": 4,
